--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -20,6 +20,7 @@
 
     <!-- Text link -->
     <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "team", "team.html", class: "btn btn-primary" %>
 
     <!-- Notification link-->
     <a href="" class="navbar-wagon-item navbar-wagon-link">
