--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline text-center">
-  <% ["Fransou", "Jeddi", "matthieu"].each do |member| %>
+  <% ["fransou", "Jeddi", "matthieu"].each do |member| %>
     <li>
       <%= image_tag "#{member}.jpg", class: "img-circle" %>
       <h3><%= member.capitalize %></h3>
